syntax = "proto3";

option go_package = "proto/generated/post;postpb";

package api;

// Message representing a Post.
message Post {
  int32 id = 1;
  int32 userId = 2;
  string title = 3;
  string body = 4;
}

// Request message for fetching posts, now with an array of IDs.
message GetPostsRequest {
  repeated int32 ids = 1;
}

// Response message containing a list of posts.
message GetPostsResponse {
  repeated Post items = 1;
}

// Post service definition.
service PostService {
  // RPC to fetch posts by IDs.
  rpc GetPosts(GetPostsRequest) returns (GetPostsResponse);
}
